# llmwiki

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.phase1-eval/: app.sqlite
.phase1-eval/wiki/: index.md  log.md
.phase1-eval/wiki/entities/: ngan-hang-thuong-mai-co-phan-quan-oi-ent_96764c72a81d2e2ec629.md
.phase1-eval/wiki/knowledge/: ac-iem-tai-chinh-cua-chung-chi-tien-gui-page_81c4bdb02b9d840dfd6a.md  giai-nghia-cac-thuat-ngu-chinh-page_2fe612116cf1aca5a30e.md  hieu-luc-thi-hanh-cua-ieu-khoan-va-ieu-kien-page_2193fc96e871b0c4f2e7.md  ieu-khoan-chung-trong-ieu-kien-phat-hanh-page_490e7fb20851bd0f9576.md  (+8 more)
backend/: __init__.py
backend/app/: cli.py  main.py
backend/tests/: compiler_fixtures.py  fake_llm.py  helpers.py  test_compiler_v2.py  test_graph_phase.py  test_health.py  test_language_policy.py  test_llm_schemas.py  test_query_agent.py  test_query_phase.py  test_source_ingest.py  test_source_registry.py  test_wiki_store.py
docs/: README.md  artifact-first-llm-wiki-foundation.md  artifact_first_llm_wiki_solution_recomendation.md  evaluation.md  implementation-architecture-current.md  knowledge-compiler-v2-implementation.md  llm-wiki-chatbot-solution.md  roadmap.md  wiki-agent-architecture.md
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
wiki/: index.md  log.example.md  log.md  overview.md  purpose.md  schema.md
wiki/knowledge/: phase-1-quality-hardening.md
(+84 files in other folders)
